# sdl-lua

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/LuaJIT-2.0.5/: CMakeLists.txt
lib/gl3w/: CMakeLists.txt
lib/imgui/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  helpers.cpp  helpers.h  imgui.cpp  main.cpp  rendering.cpp  script.lua  scripting.cpp  shaders.cpp
